--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,9 +45,11 @@
     <string name="gen_rand_identifier">from entropy</string>
     <string name="setup_end_ok">setup ended ok</string>
     <string name="title_activity_settings">settings</string>
-    <string name="default_invite_url">http:192.168.1.40:8000/invite/</string>
+    <string name="default_invite_url">http://192.168.1.40:8000/invite/</string>
     <string name="cancel">cancel</string>
     <string name="restore_from_mnemonic">from mnemonic</string>
     <string name="get_invite_and_redeem_it">get invite from %s and redeem it</string>
     <string name="edit_default_invite_url">edit default invite url</string>
+    <string name="replying_to">Replying to %s</string>
+    <string name="empty_list">Message list is empty.</string>
 </resources>
