--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,10 @@
     <string name="gen_rand_identifier">from entropy</string>
     <string name="setup_end_ok">setup ended ok</string>
     <string name="title_activity_settings">settings</string>
-    <string name="default_invite_url">http://delog.in/invite/</string>
+    <string-array name="default_servers">
+        <item>delog.in:8000</item>
+        <item>192.168.0.108:8000</item>
+    </string-array>
     <string name="cancel">cancel</string>
     <string name="restore_from_mnemonic">from mnemonic</string>
     <string name="get_invite_and_redeem_it">get invite from %s and redeem it</string>
@@ -54,4 +57,5 @@
     <string name="empty_list">Message list is empty.</string>
     <string name="fromQRCode">from QR Code</string>
     <string name="draft_saved_confirmation">Draft saved, click publish to broadcast</string>
+    <string name="conn_refused">Connection refused</string>
 </resources>
