--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="fromQRCode">from QR Code</string>
     <string name="draft_saved_confirmation">Draft saved, click publish to broadcast</string>
     <string name="conn_refused">Connection refused</string>
+    <string name="tor_sock_proxy_port">9050</string>
 </resources>
