--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="upload_image">upload image</string>
     <string name="forward">forward</string>
     <string name="back">back</string>
+    <string name="later">later</string>
 </resources>
